--- a/files/css/index.css
+++ b/files/css/index.css
@@ -3,7 +3,7 @@ body{
 }
 ul{
     list-style-type: none;
-    list-style-position: inherit;
-    margin: 0;
-    padding: 0;
+}
+li{
+    float left;
 }
