added nav bar to all html files

--- a/files/css/form.css
+++ b/files/css/form.css
@@ -9,3 +9,22 @@ p {
 body {
     background-color: aliceblue;
 }
+
+ul{
+    list-style-type: none;
+}
+li{
+    float: left;
+    border-right: 1px solid #bbb;
+}
+a{
+    display: block;
+    padding: 8px;
+    background-color: lightblue;
+}
+li:last-child {
+    border-right: none;
+}
+.active {
+    background-color: skyblue;
+}
