--- a/files/css/about.css
+++ b/files/css/about.css
@@ -1,3 +1,21 @@
 body{
     background-color: aliceblue;
 }
+ul{
+    list-style-type: none;
+}
+li{
+    float: left;
+    border-right: 1px solid #bbb;
+}
+a{
+    display: block;
+    padding: 8px;
+    background-color: lightblue;
+}
+li:last-child {
+    border-right: none;
+}
+.active {
+    background-color: skyblue;
+}
