--- a/files/css/about.css
+++ b/files/css/about.css
@@ -8,7 +8,7 @@ li{
     float: left;
     border-right: 1px solid #bbb;
 }
-a{
+a.nav{
     display: block;
     padding: 8px;
     background-color: lightblue;
