--- a/files/css/index.css
+++ b/files/css/index.css
@@ -1,5 +1,6 @@
 body{
-    background-image: url(files/images/WHAT-IS-WEB-DESIGN.png);
+    background-image:url("files/images/WHAT-IS-WEB-DESIGN.png");
+    background-color:aliceblue;
 }
 ul{
     list-style-type: none;
