--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,11 +6,17 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+
+#back{
+	text-decoration: none;
+}
+
 input {
 	background-color: transparent;
 	border-color: blue;
 	border-style: dotted;
 	border-radius: 5%;
+
 }
 
 #textarea{
@@ -19,6 +25,17 @@ input {
 	border-radius: 3%;
 	resize: none;
 	border-style: dotted;
+}
+
+input[type=button]{
+	background-color: transparent;
+	border-color: blue;
+	border-style: inset;
+	color: black;
+	padding: 8px 16px;
+	text-decoration: none;
+	margin: 0px 0px;
+	cursor: pointer;
 }
 
 html, body, div, span, applet, object,
